stl-test/Tests/coordinate/bounds/Negative/test8.cpp
//#error
#include <coordinate>
int main(void)
{
    std::bounds<2> cord{1111111111, 11111111111}
}
